<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.thetidbitapp.tidbit.NewEventFragment"
    android:scrollbars="none"
    android:background="@color/white"
    android:fillViewport="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/cover_photo"
            android:scaleType="centerCrop"
            android:id="@+id/create_event_cover"/>

        <com.rey.material.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fab_upload"
            app:fab_iconSrc="@drawable/ic_action_new"
            app:fab_elevation="2dp"
            app:fab_backgroundColor="@color/sec_bright"
            app:rd_style="@drawable/ripple"
            app:rd_rippleType="wave"
            android:layout_below="@+id/create_event_cover"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout"
            android:layout_marginTop="-32dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/double_std_margin"
            android:layout_marginLeft="@dimen/std_margin"
            android:layout_marginRight="@dimen/std_margin"
            android:layout_below="@id/create_event_cover"
            android:id="@+id/linearLayout">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:met_baseColor="@color/black"
                app:met_primaryColor="@color/sec_bright"
                app:met_errorColor="#fffd0000"
                android:hint="@string/hint_title"
                app:met_floatingLabel="highlight"
                app:met_singleLineEllipsis="true"
                app:met_maxCharacters="50"
                app:met_floatingLabelAlwaysShown="true"
                app:met_textColorHint="@color/white"
                app:met_floatingLabelPadding="8dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:met_baseColor="@color/black"
                app:met_primaryColor="@color/sec_bright"
                app:met_errorColor="#fffd0000"
                android:hint="@string/hint_location"
                app:met_floatingLabel="highlight"
                app:met_singleLineEllipsis="true"
                app:met_floatingLabelAlwaysShown="true"
                app:met_textColorHint="@color/white"
                app:met_floatingLabelPadding="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffc3c3c3"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                android:text="@string/from"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rey.material.widget.Button
                    android:id="@+id/from_date_button"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/date"
                    app:rd_enable="true"/>
                
                <com.rey.material.widget.Button
                    android:id="@+id/from_time_button"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/time"
                    app:rd_enable="true"/>
                
             </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="#ffc3c3c3"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                android:text="@string/to"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.rey.material.widget.Button
                    android:id="@+id/to_date_button"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/date"
                    app:rd_enable="true"/>

                <com.rey.material.widget.Button
                    android:id="@+id/to_time_button"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/time"
                    app:rd_enable="true"/>

            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_organizer"
                android:textSize="16sp"
                app:met_baseColor="@color/black"
                app:met_primaryColor="@color/sec_bright"
                app:met_errorColor="#fffd0000"
                app:met_floatingLabel="highlight"
                app:met_singleLineEllipsis="true"
                app:met_maxCharacters="50"
                app:met_floatingLabelAlwaysShown="true"
                app:met_textColorHint="@color/white"
                app:met_floatingLabelPadding="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textSize="16sp"
                    app:met_baseColor="@color/black"
                    app:met_primaryColor="@color/sec_bright"
                    app:met_errorColor="#fffd0000"
                    android:hint="@string/hint_food"
                    app:met_floatingLabel="highlight"
                    app:met_singleLineEllipsis="true"
                    app:met_maxCharacters="25"
                    app:met_floatingLabelAlwaysShown="true"
                    app:met_textColorHint="@color/white"
                    app:met_floatingLabelPadding="8dp"/>

                <com.rey.material.widget.CheckBox
                    style="@style/Material.Drawable.CheckBox"
                    android:layout_width="0dip"
                    android:layout_weight="0.2"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="Free"
                    app:cbd_strokeSize="1dp"
                    app:cbd_strokeColor="@color/theme_gray"
                    app:cbd_tickColor="@color/white" />

            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/std_margin"
                android:textSize="16sp"
                app:met_baseColor="@color/black"
                app:met_primaryColor="@color/sec_bright"
                app:met_errorColor="#fffd0000"
                android:hint="Description"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="true"
                app:met_textColorHint="@color/white"
                app:met_floatingLabelPadding="8dp"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
